--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(launchNVB1)
 export(modal_fill_pdf)
 export(obsev_FILENAMES)
 export(obsev_go_fill_pdf)
+export(obsev_go_get_pdf)
 export(obsev_manual)
 export(split_name_vec)
